# open3d-examples

./: 404.html  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  README.md  SETUP.md  app.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  run_visualization.py
.github/: copilot-instructions.md
.github/workflows/: deploy-docs.yml  docs.yml
api/: index.html
docs/: api.md  index.md
frontend/: .eslintrc.cjs  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.tsx  types.ts
frontend/src/components/: ExampleDetail.tsx  ExamplesList.tsx  Header.tsx
frontend/src/services/: api.ts
frontend/src/styles/: App.css  ExampleDetail.css  ExamplesList.css  Header.css  index.css
search/: search_index.json
src/open3d_examples/: __init__.py  __main__.py
