[project]
name = "open3d-examples"
version = "0.1.0"
description = "Open3D visualization examples"
authors = [
    { name = "ravikr1", email = "ravikr731@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "open3d>=0.18",
    "matplotlib>=3.8"
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"
